--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ superlists/superlists/__pycache__/wsgi.cpython-39.pyc
 .idea/misc.xml
 .idea/inspectionProfiles/profiles_settings.xml
 superlists/geckodriver.log
+superlists/lists/__pycache__/views.cpython-39.pyc
